Wrap calculations to fix deprecation warnings.

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -78,7 +78,7 @@ h1, h2, h3, h4, h5, h6,
 p, blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
-  margin-bottom: $spacing-unit / 2;
+  margin-bottom: calc($spacing-unit / 2);
 }
 
 
@@ -188,7 +188,7 @@ a {
 blockquote {
   color: #dcdccc;
   border-left: 4px solid $grey-color-light;
-  padding-left: $spacing-unit / 2;
+  padding-left: calc($spacing-unit / 2);
   @include relative-font-size(1.125);
   letter-spacing: -1px;
   font-style: italic;
@@ -249,8 +249,8 @@ pre {
   @include media-query($on-laptop) {
     max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
     max-width:         calc(#{$content-width} - (#{$spacing-unit}));
-    padding-right: $spacing-unit / 2;
-    padding-left: $spacing-unit / 2;
+    padding-right: calc($spacing-unit / 2);
+    padding-left: calc($spacing-unit / 2);
   }
 }
 
@@ -314,7 +314,7 @@ table {
     }
   }
   th, td {
-    padding: ($spacing-unit / 3) ($spacing-unit / 2);
+    padding: calc($spacing-unit / 3) calc($spacing-unit / 2);
   }
   th {
     background-color: lighten($grey-color-light, 3%);
@@ -345,8 +345,8 @@ math {
     background-color: rgba(63, 63, 63, 0.4);
     margin-top: $spacing-unit;
     margin-bottom: $spacing-unit;
-    padding: $spacing-unit / 2;
-    padding-bottom: $spacing-unit / 8;
+    padding: calc($spacing-unit / 2);
+    padding-bottom: calc($spacing-unit / 8);
     border-radius: 8px;
 }
 
@@ -394,7 +394,7 @@ article {
     padding-right: $spacing-unit*1.25;
     padding-left: $spacing-unit*1.25;
     @include media-query($on-palm) {
-        padding-right: $spacing-unit/2;
-        padding-left: $spacing-unit/2;
+        padding-right: calc($spacing-unit / 2);
+        padding-left: calc($spacing-unit / 2);
     }
 }
