--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -49,7 +49,7 @@
   @include media-query($on-palm) {
     position: absolute;
     top: 9px;
-    right: $spacing-unit / 2;
+    right: calc($spacing-unit / 2);
     background-color: $background-color;
     border: 1px solid $grey-color-light;
     border-radius: 5px;
@@ -113,7 +113,7 @@
 .footer-heading {
   @include relative-font-size(1.125);
   padding-top: $spacing-unit;
-  margin-bottom: $spacing-unit / 2;
+  margin-bottom: calc($spacing-unit / 2);
   margin-left: $spacing-unit*1.5;
   margin-right: $spacing-unit*1.5;
 }
@@ -134,7 +134,7 @@
 
 .footer-col {
   float: left;
-  margin-bottom: $spacing-unit / 2;
+  margin-bottom: calc($spacing-unit / 2);
   // padding-left: $spacing-unit / 2;
 }
 
